Make mobile-friendly?

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 				padding: 0;
 				overflow: hidden;
 			}
+			body {
+				width: device-width;
+				zoom: 1;
+			}
 			iframe {
 				width: calc(100% - 50px);
 				border: none;
