--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Bible In A Year</title>
 		<style>
 			html, body {
@@ -9,10 +10,10 @@
 				padding: 0;
 				overflow: hidden;
 			}
-			body {
+			/*body {
 				width: device-width;
 				zoom: 1;
-			}
+			}*/
 			iframe {
 				width: calc(100% - 50px);
 				border: none;
