--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 				font-weight: bold;
 				flex: auto;
 			}
-			.nav-button {
+			.center-content {
 				display: flex;
 				justify-content: center;
 				align-items: center;
+			}
+			.nav-button {
 				display: flex;
 				background-color: #ddd;
 				color: #000;
@@ -38,7 +40,6 @@
 				background-color: #bbb;
 			}
 			.nav-input {
-				height: calc(12vh - 2px);
 				border: 1px solid black;
 				background-color: #fff;
 				font-size: 18pt;
@@ -51,11 +52,11 @@
 	</head>
 	<body>
 		<div class="nav-container">
-			<a class="nav nav-button previous" href="javascript:setPassage(-1);">&lt;</a>
-			<form>
-				<input class="nav nav-input" id="date" type="date" name="date" onchange="this.form.submit()">
+			<a class="nav center-content nav-button previous" href="javascript:setPassage(-1);">&lt;</a>
+			<form class="nav center-content">
+				<input class="nav-input" id="date" type="date" name="date" onchange="this.form.submit()">
 			</form>
-			<a class="nav nav-button next" href="javascript:setPassage(1);">&gt;</a>
+			<a class="nav center-content nav-button next" href="javascript:setPassage(1);">&gt;</a>
 		</div>
 
 		<iframe id="iframe"></iframe>
