--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=2">
+		<meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1">
 		<link rel="shortcut icon" href="./bible.ico">
 		<title>Bible In A Year</title>
 		<style>
