--- a/index.html
+++ b/index.html
@@ -77,21 +77,33 @@
 			var passages = dayToPassagesMap[today]
 			var passageIndex = 0
 			function setPassage(offset) {
-				var nextPassageIndex = Math.min(3, Math.max(0, passageIndex + offset))
-				if (offset === 0 || nextPassageIndex !== passageIndex) {
-					passageIndex = nextPassageIndex
-					var passage = passages[passageIndex]
-					document.title = 'Bible In A Year - ' + today + ' - ' + passage
-					var iframe = document.getElementById('iframe')
-					iframe.src = 'https://www.biblegateway.com/passage/?version=NKJV&interface=print&search=' + encodeURIComponent(passage)
-				}
 				var prev = document.querySelector('.previous')
 				var next = document.querySelector('.next')
+				var iframe = document.getElementById('iframe')
 
-				prev.classList.remove('disabled')
-				next.classList.remove('disabled')
-				if (passageIndex === 0) prev.classList.add('disabled')
-				if (passageIndex === 3) next.classList.add('disabled')
+				document.title = 'Bible In A Year - ' + today
+
+				if (passages) {
+					var nextPassageIndex = Math.min(3, Math.max(0, passageIndex + offset))
+					if (offset === 0 || nextPassageIndex !== passageIndex) {
+						passageIndex = nextPassageIndex
+						var passage = passages[passageIndex]
+						document.title += ' - ' + passage
+						iframe.src = 'https://www.biblegateway.com/passage/?version=NKJV&interface=print&search=' + encodeURIComponent(passage)
+					}
+
+					prev.classList.remove('disabled')
+					next.classList.remove('disabled')
+					if (passageIndex === 0) prev.classList.add('disabled')
+					if (passageIndex === 3) next.classList.add('disabled')
+				} else {
+					document.title += ' - No passage found!'
+
+					iframe.srcdoc = '<h1 style="font-family:Calibri,sans-serif;text-align:center;width:calc(100vw - 8px);position:absolute;top:45vh;">No passage found!</h1>'
+
+					prev.classList.add('disabled')
+					next.classList.add('disabled')
+				}
 			}
 
 			setPassage(0)
