Add background message for loading and when no passage is found

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 			<a class="nav center-content nav-button" href="javascript:setPassage(3);">4</a>
 		</div>
 
+		<h1 id="background-message">Loading...</h1>
+
 		<iframe></iframe>
 		<iframe></iframe>
 		<iframe></iframe>
