Avoid highlight tool and bottom ad by sandboxing

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 		<h1 id="background-message">Loading...</h1>
 
-		<iframe></iframe>
-		<iframe></iframe>
-		<iframe></iframe>
-		<iframe></iframe>
+		<iframe sandbox></iframe>
+		<iframe sandbox></iframe>
+		<iframe sandbox></iframe>
+		<iframe sandbox></iframe>
 
 		<script src="./dayToPassagesMap.js"></script>
 		<script src="./main.js"></script>
