--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1">
+		<meta name="apple-mobile-web-app-capable" content="yes">
 		<title>Bible In A Year</title>
+		<link rel="manifest" href="./manifest.json">
 		<link rel="shortcut icon" href="./bible.ico">
 		<link rel="stylesheet" type="text/css" href="./styles.css">
 	</head>
 	<body>
-		<form class="nav-container center-content">
+		<noscript>This page requires javascript. Sorry!</noscript>
+		<form class="flex-center">
 			<input class="nav-input" id="date" type="date" name="date" onchange="this.form.submit()">
 		</form>
-		<div class="nav-container center-content">
-			<a class="nav center-content nav-button disabled" href="javascript:setPassage(0);">1</a>
-			<a class="nav center-content nav-button" href="javascript:setPassage(1);">2</a>
-			<a class="nav center-content nav-button" href="javascript:setPassage(2);">3</a>
-			<a class="nav center-content nav-button" href="javascript:setPassage(3);">4</a>
+		<div class="flex-center">
+			<a class="flex-center nav-button" href="javascript:setPassage(0);">1</a>
+			<a class="flex-center nav-button" href="javascript:setPassage(1);">2</a>
+			<a class="flex-center nav-button" href="javascript:setPassage(2);">3</a>
+			<a class="flex-center nav-button" href="javascript:setPassage(3);">4</a>
 		</div>
 
 		<h1 id="background-message">Loading...</h1>
