--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<title>Bible In A Year</title>
 		<link rel="manifest" href="./manifest.json">
-		<link rel="shortcut icon" href="./bible.ico">
+		<link rel="shortcut icon" href="./icons/bible.ico">
 		<link rel="stylesheet" type="text/css" href="./styles.css">
 	</head>
 	<body>
