--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1">
+		<meta name="theme-color" content="#404040">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<title>Bible In A Year</title>
 		<link rel="manifest" href="./manifest.json">
