Make the nav look decent on a phone screen, fix edges
The text was butting up against the edge on small-width screens. Added padding to fix.

--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
+			flex-wrap: wrap;
 		}
 
 		.section,
 		.container {
 			margin: 0 auto;
 			max-width: 32em;
+			padding: 0 0.5em;
 		}
 		.section {
 			margin-top: 1em;
