Finish renaming to Canon Daily
Fixes #22

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<input class="nav-input" id="date" type="date" name="date" onchange="this.form.submit()">
 			</form>
 			<a href="./?page=prayer-for-filling-of-spirit">Prayer</a>
-			<a href="https://github.com/ArtskydJ/bible-in-a-year">Github</a>
+			<a href="https://github.com/ArtskydJ/canondaily.com">Github</a>
 		</div>
 	</nav>
 
