Add Proud VS Broken, and 20ish meditation verses

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
 			font-family: calibri, arial, sans-serif;
 			font-size: 15pt;
 			background-color: #fafafa;
-			line-height: 1.4;
+			line-height: 1.6;
 			font-weight: 300;
+		}
+		hr {
+			border: none;
+			border-top: 1px solid #ccc;
 		}
 
 		nav {
@@ -51,6 +55,9 @@
 			align-items: center;
 			flex-wrap: wrap;
 		}
+		.dark-bg {
+			background-color: #ccc;
+		}
 
 		.section,
 		.container {
@@ -63,7 +70,7 @@
 			margin-bottom: 2em;
 		}
 		#background-message,
-		.reference {
+		.header {
 			font-size: 2em;
 			display: block;
 			text-align: center;
@@ -84,6 +91,15 @@
 		}
 		.stanza .line {
 			display: block;
+		}
+
+		.subsection .header {
+			font-size: 1.6em;
+		}
+		.subheader {
+			font-size: 1.4em;
+			display: inline;
+			padding-right: 1em;
 		}
 	</style>
 </head>
