--- a/index.html
+++ b/index.html
@@ -102,6 +102,18 @@
 			padding-right: 1em;
 		}
 	</style>
+	<script type="text/javascript">
+	var _paq = _paq || [];
+	_paq.push(['trackPageView']);
+	_paq.push(['enableLinkTracking']);
+	(function() {
+		var u="https://jlddata.com/";
+		_paq.push(['setTrackerUrl', u+'pwk-php.proxy']);
+		_paq.push(['setSiteId', '1']);
+		var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+		g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'pwk-js.proxy'; s.parentNode.insertBefore(g,s);
+	})();
+	</script>
 </head>
 <body>
 	<noscript>This page requires javascript. Sorry!</noscript>
