--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 	_paq.push(['enableLinkTracking']);
 	(function() {
 		var u="https://jlddata.com/";
-		_paq.push(['setTrackerUrl', u+'pwk-php.proxy']);
+		_paq.push(['setTrackerUrl', u+'p.php']);
 		_paq.push(['setSiteId', '1']);
 		var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-		g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'pwk-js.proxy'; s.parentNode.insertBefore(g,s);
+		g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'p.js'; s.parentNode.insertBefore(g,s);
 	})();
 	</script>
 </head>
