attempt to fix css issue

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'p.js'; s.parentNode.insertBefore(g,s);
 	})();
 	</script>
+	<!-- manually modify to hopefully fix css issue? -->
 </head>
 <body>
 	<noscript>This page may nor work correctly without javascript.</noscript>
